--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version":2,
   "version":"1.0",
-  "name":"extensiontest",
+  "name":"skipperclicker",
   "content_scripts":[
     {
      "matches":["<all_urls>"],
@@ -22,8 +22,8 @@
   ],
   "browser_specific_settings": {
     "gecko": {
-      "id": "extensiontest@example.org",
-      "strict_min_version": "50.0"
+      "id": "skipperclicker@myextensions.org",
+      "strict_min_version": "80.0"
     }
   }
 }
